# quarto_game

./: .gitignore  README.md  camembert.py  heuristics.py  image_generator.py  main.py  minmax.py  model.py  partie.py  pyproject.toml  quarto_gui.py  resultats.json  resultats_cibis.json  resultats_cibiss.json  resultats_cibisss.json  resultats_cibisss_prof_3.json  resultats_cibisss_prof_3_selec.json
joueurs/: HumanPlayer.py  MinMax_Player.py  RandomPlayer.py
